Close editor when changing views

When editing a transaction and changing to a different view, the editor
remained open. This will return the old behavior in that the user is
asked what to do (cancel or save the edit) before the view is switched.

BUG: 313848
FIXED-IN: 5.0